--- a/Data-Science-Projects/05-Data-Science-Netflix-Data-Analysis/Netflix-Movie-Data-Analysis-Documented.ipynb
+++ b/Data-Science-Projects/05-Data-Science-Netflix-Data-Analysis/Netflix-Movie-Data-Analysis-Documented.ipynb
@@ -375,11 +375,16 @@
     "- **Popularity**: We identified the specific movies with the highest and lowest popularity scores.\n",
     "- **Release Trends**: We can observe the trend of movie releases over the years from the histogram."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -393,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
