Added README.md file for every project

--- a/Data-Science-Projects/07-Google-Play-Store-Data-EDA/Google-Play-Store-EDA.ipynb
+++ b/Data-Science-Projects/07-Google-Play-Store-Data-EDA/Google-Play-Store-EDA.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6174e033",
+   "metadata": {},
+   "source": [
+    "## Data Loading and Initial Exploration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7777244e",
@@ -371,8 +379,8 @@
    "id": "715133c8",
    "metadata": {},
    "source": [
-    "#### Insights and Observations\n",
-    "- The dataset has missing values."
+    "## Insights and observation\n",
+    "The dataset has msising values"
    ]
   },
   {
@@ -1833,7 +1841,7 @@
    "id": "90fdde23",
    "metadata": {},
    "source": [
-    "#### Feature Information\n",
+    "## 3.2 Feature Information\n",
     "1. App :- Name of the App\n",
     "2. Category :- Category under which the App falls.\n",
     "3. Rating :- Application's rating on playstore\n",
@@ -2053,7 +2061,7 @@
     }
    ],
    "source": [
-    "# Categorial Features Analysis\n",
+    "# categorical columns\n",
     "plt.figure(figsize=(20, 15))\n",
     "plt.suptitle('Univariate Analysis of Categorical features', fontsize=20, fontweight='bold', alpha=0.8, y=1.)\n",
     "category = ['Type', 'Content Rating']\n",
@@ -2070,7 +2078,7 @@
    "id": "7961d0f3",
    "metadata": {},
    "source": [
-    "#### Which is the most popular app category?"
+    "## Which is the most popular app category?"
    ]
   },
   {
@@ -2190,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 45,
    "id": "b0707580",
    "metadata": {},
    "outputs": [
@@ -2200,7 +2208,7 @@
        "<Axes: ylabel='count'>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2224,9 +2232,10 @@
    "id": "49014208",
    "metadata": {},
    "source": [
-    "#### Observations and Insights\n",
-    "- FAMILY is the most popular app category.\n",
-    "- Beauty, Cosmetics and Dating are the least popular app categories."
+    "## Observations\n",
+    "\n",
+    "1. There are more kinds of apps in playstore which are under category of family, games & tools\n",
+    "2. Beatuty,comics,arts and weather kinds of apps are very less in playstore"
    ]
   },
   {
@@ -2234,12 +2243,12 @@
    "id": "5ccfcaf7",
    "metadata": {},
    "source": [
-    "#### Top 10 App categories"
+    "## Top 10 App Categories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 46,
    "id": "2c152746",
    "metadata": {},
    "outputs": [],
@@ -2250,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "id": "26f7aea6",
    "metadata": {},
    "outputs": [
@@ -2457,7 +2466,7 @@
        "BEAUTY                  53"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2468,7 +2477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 48,
    "id": "ead0d47e",
    "metadata": {},
    "outputs": [
@@ -2484,6 +2493,7 @@
     }
    ],
    "source": [
+    "## top 10 app\n",
     "plt.figure(figsize=(15,6))\n",
     "sns.barplot(x=category.index[:10], y ='count',data = category[:10],palette='hls')\n",
     "plt.title('Top 10 App categories')\n",
@@ -2496,9 +2506,9 @@
    "id": "d11c25a9",
    "metadata": {},
    "source": [
-    "#### Insights\n",
-    "- Family category has the most number of apps with 18% of apps belonging to it, followed by Games category which has 11% of the apps.\n",
-    "- Least number of apps belong to the Beauty category with less than 1% of the total apps belonging to it."
+    "## Insights\n",
+    "1. Family category has the most number of apps with 18% of apps belonging to it, followed by Games category which has 11% of the apps.\n",
+    "2. Least number of apps belong to the Beauty category with less than 1% of the total apps belonging to it."
    ]
   },
   {
@@ -2506,12 +2516,12 @@
    "id": "239e249f",
    "metadata": {},
    "source": [
-    "#### Which Category has largest number of installations??"
+    "## Which Category has largest number of installations??"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 49,
    "id": "e86c2366",
    "metadata": {},
    "outputs": [
@@ -2521,7 +2531,7 @@
        "Text(0.5, 1.0, 'Most Popular Categories in Play Store')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2555,9 +2565,9 @@
    "id": "a18b92cf",
    "metadata": {},
    "source": [
-    "#### Insights\n",
-    "- Out of all the categories \"GAME\" has the most number of Installations.\n",
-    "- With almost 35 Billion Installations GAME is the most popular Category in Google App store"
+    "## Insights\n",
+    "1. Out of all the categories \"GAME\" has the most number of Installations.\n",
+    "2. With almost 35 Billion Installations GAME is the most popular Category in Google App store"
    ]
   },
   {
@@ -2565,12 +2575,12 @@
    "id": "2e687442",
    "metadata": {},
    "source": [
-    "#### What are the Top 5 most installed Apps in Each popular Categories ?"
+    "## What are the Top 5 most installed Apps in Each popular Categories ??"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 50,
    "id": "be700843",
    "metadata": {},
    "outputs": [
@@ -2613,7 +2623,7 @@
    "id": "8a0242e4",
    "metadata": {},
    "source": [
-    "#### Insights\n",
+    "## Insights\n",
     "- Most popular game is Subway Surfers.\n",
     "- Most popular communication app is Hangouts.\n",
     "- Most popular productivity app is Google Drive.\n",
@@ -2625,12 +2635,12 @@
    "id": "ea811ae2",
    "metadata": {},
    "source": [
-    "#### How many apps are there on Google Play Store which get 5 ratings??"
+    "## How many apps are there on Google Play Store which get 5 ratings??"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 51,
    "id": "1fbc2849",
    "metadata": {},
    "outputs": [
@@ -2685,7 +2695,7 @@
        "0   FAMILY        10  DN Employee     5.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2703,14 +2713,14 @@
    "id": "eb0ea4ba",
    "metadata": {},
    "source": [
-    "#### Result\n",
+    "## Result\n",
     "- There are 271 five rated apps on Google Play store\n",
     "- Top most is 'CT Brain Interpretation' from 'Family' Category"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 52,
    "id": "1e0dc285",
    "metadata": {},
    "outputs": [
@@ -2883,7 +2893,7 @@
        "4   20      6  2018  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
